force-app/main/default/objects/Case/fields/AI_Processed__c.field-meta.xml
<CustomField>
    <fullName>AI_Processed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>AI Processed</label>
    <type>Checkbox</type>
</CustomField>